k8singress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: service-aforo255
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-aforo255
  template:
    metadata:
      labels:
        app: service-aforo255
    spec:
      containers:
      - name: service-aforo255
        image: bgzapatas/servicenet6:latest
        ports:
        - containerPort: 80
        imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: app-service
spec:
  type: ClusterIP
  selector:
    app: service-aforo255
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
